# euipo-tm-client

./: CLAUDE.md  README.md  RELEASING.md  main.py  pyproject.toml
.github/workflows/: publish.yml
euipo_tm_client/: __init__.py  auth.py  client.py  config.py  errors.py
specs/: openapi.json
tests/: test_client.py  test_config.py
